--- a/multi_agent/.env
+++ b/multi_agent/.env
@@ -1,3 +1,3 @@
 GOOGLE_GENAI_USE_VERTEXAI=FALSE
-GOOGLE_API_KEY="AIzaSyCGJNHevdKfP9J5SE8MBMEr8nR6tAvsjgY"
-ALPHA_VANTAGE_API_KEY="I823MHOD082U1EQ3"
+GOOGLE_API_KEY="<YOUR_GOOGLE_API_KEY>"
+ALPHA_VANTAGE_API_KEY="<YOUR_ALPHA_VANTAGE_API_KEY>"
